- fix some python3 compatibility issues (thanks Benjamin Peterson)
- fixes for making the jython/win32 combination work
- fixes for handling of unicode exception values
- added links to the new capturelog and coverage plugins 
- (issue87) fix unboundlocal error in assertionold code 
- (issue86) improve documentation for looponfailing
- ship distribute_setup.py version 0.6.10 


Changes between 1.2.1 and 1.2.0
=====================================

- refined usage and options for "py.cleanup"::

    py.cleanup     # remove "*.pyc" and "*$py.class" (jython) files
    py.cleanup -e .swp -e .cache # also remove files with these extensions
    py.cleanup -s  # remove "build" and "dist" directory next to setup.py files
    py.cleanup -d  # also remove empty directories 
    py.cleanup -a  # synonym for "-s -d -e 'pip-log.txt'"
    py.cleanup -n  # dry run, only show what would be removed

- add a new option "py.test --funcargs" which shows available funcargs 
  and their help strings (docstrings on their respective factory function) 
  for a given test path

- display a short and concise traceback if a funcarg lookup fails 

- early-load "conftest.py" files in non-dot first-level sub directories. 
  allows to conveniently keep and access test-related options in a ``test`` 
  subdir and still add command line options. 

- fix issue67: new super-short traceback-printing option: "--tb=line" will print a single line for each failing (python) test indicating its filename, lineno and the failure value

- fix issue78: always call python-level teardown functions even if the
  according setup failed.  This includes refinements for calling setup_module/class functions 
  which will now only be called once instead of the previous behaviour where they'd be called
  multiple times if they raise an exception (including a Skipped exception).  Any exception
  will be re-corded and associated with all tests in the according module/class scope.
